<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblChopp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="124dp"
        android:text="@string/lblChopp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtChopp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtChopp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblChopp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblPizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/lblPizza"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lblChopp"
        app:layout_constraintTop_toBottomOf="@+id/lblChopp" />

    <TextView
        android:id="@+id/lblRecheio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblRecheio"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lblPizza"
        app:layout_constraintTop_toBottomOf="@+id/lblPizza" />

    <EditText
        android:id="@+id/txtPizza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblPizza"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtRecheio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblRecheio"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblPessoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblPessoa"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lblRecheio"
        app:layout_constraintTop_toBottomOf="@+id/lblRecheio" />

    <EditText
        android:id="@+id/txtPessoa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblPessoa"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblConsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="48dp"
        android:text="@string/lblConsumo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <TextView
        android:id="@+id/lblServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblServico"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lblConsumo"
        app:layout_constraintTop_toBottomOf="@+id/lblConsumo" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblTotal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lblServico"
        app:layout_constraintTop_toBottomOf="@+id/lblServico" />

    <TextView
        android:id="@+id/lblTotalPessoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblTotalPessoa"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lblTotal"
        app:layout_constraintTop_toBottomOf="@+id/lblTotal" />

    <TextView
        android:id="@+id/lblResultadoConsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:text="_______"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblConsumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lblConsumo" />

    <TextView
        android:id="@+id/lblResultadoServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:text="_______"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblServico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblResultadoConsumo" />

    <TextView
        android:id="@+id/lblResultadoTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:text="_______"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblResultadoServico" />

    <TextView
        android:id="@+id/lblResultadoTotalPessoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:text="_______"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblTotalPessoa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblResultadoTotal" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:onClick="OnCalcular"
        android:text="@string/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPessoa" />

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/lblTitulo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>